--- a/styles.css
+++ b/styles.css
@@ -551,14 +551,17 @@ p {
 .education-item {
   margin-bottom: var(--space-4);
 }
-.education-item span { display: block; margin-top: 2px; }
+.education-item span { 
+  display: block;
+   margin-top: 2px;
+   font-size: var(--font-size-base);
+}
 .education-item a {
   padding: 2px 0;
   margin: -2px 0;
   display: inline-flex;
   align-items: center;
   line-height: 1.4;
-  font-size: var(--font-size-base);
 }
 @media (min-width: 600px) {
   .education-item a { min-height: unset; padding: 0; margin: 0; }
